feat: adds ivy runtine info in docs & in github... workflows and license

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -37,6 +37,13 @@ updates:
       - adriangonz
 
   - package-ecosystem: "pip"
+    directory: "/runtimes/ivy"
+    schedule:
+      interval: "weekly"
+    reviewers:
+      - 
+
+  - package-ecosystem: "pip"
     directory: "/runtimes/mlflow"
     schedule:
       interval: "weekly"
