--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -89,6 +89,7 @@ jobs:
           - sklearn
           - xgboost
           - lightgbm
+          - ivy
           - mlflow
           - huggingface
           - alibi-explain
