--- a/tox.ini
+++ b/tox.ini
@@ -29,6 +29,7 @@ commands =
         {toxinidir}/runtimes/xgboost \
         {toxinidir}/runtimes/mllib \
         {toxinidir}/runtimes/lightgbm \
+        {toxinidir}/runtimes/ivy \
         {toxinidir}/runtimes/mlflow \
         {toxinidir}/runtimes/huggingface
 
